<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.OptionsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary" >

        <LinearLayout
            android:id="@+id/options_fragment_linearlayout"
            android:layout_width="@dimen/default_width"
            android:layout_height="@dimen/button_layout_height"
            android:layout_marginStart="@dimen/left_margin_small"
            android:layout_marginTop="@dimen/top_margin_extra_small"
            android:layout_marginEnd="@dimen/right_margin_small"
            android:layout_marginBottom="@dimen/bottom_margin_small"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/about_the_app_button"
                android:layout_width="@dimen/default_width"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:text="@string/app_info_button_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/privacy_info_button"
                android:layout_width="@dimen/default_width"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:text="@string/privacy_info_button_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/send_feedback_button"
                android:layout_width="@dimen/default_width"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:text="@string/send_feedback_button_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/notification_switch"
                android:layout_width="@dimen/default_width"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:text="@string/toggle_all_notifications"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white"
                android:theme="@style/SwitchTheme" />

            <Button
                android:id="@+id/all_notification_button"
                android:layout_width="@dimen/default_width"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:text="@string/trigger_all_notifications_now"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>