<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MessageEdit"
    android:background="@color/primary" >

    <TextView
        android:id="@+id/message_label_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/left_margin_small"
        android:layout_marginTop="@dimen/bottom_margin_small"
        android:layout_marginBottom="@dimen/across_height_large"
        android:text="@string/edit_message_label"
        app:layout_constraintBottom_toTopOf="@+id/save_message_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/message_edit_text"
        android:layout_width="@dimen/default_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/left_margin_medium"
        android:layout_marginTop="@dimen/between_margin_large"
        android:layout_marginEnd="@dimen/right_margin_medium"
        android:ems="10"
        android:gravity="start|top"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:maxLength="280"
        android:hint="@string/message_character_limit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message_label_textview"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/message_textview"
        android:layout_width="@dimen/default_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/left_margin_medium"
        android:layout_marginTop="@dimen/top_margin_medium"
        android:layout_marginBottom="@dimen/bottom_margin_large"
        android:ems="10"
        android:enabled="true"
        android:focusable="true"
        android:gravity="start|top"
        android:longClickable="true"
        android:text="@string/space"
        android:textIsSelectable="true"
        app:layout_constraintBottom_toTopOf="@+id/save_message_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message_label_textview" />

    <Button
        android:id="@+id/save_message_button"
        android:layout_width="@dimen/default_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/left_margin_small"
        android:layout_marginEnd="@dimen/right_margin_small"
        android:layout_marginBottom="@dimen/bottom_margin_medium"
        android:background="@color/colorPrimaryDark"
        android:onClick="saveMessage"
        android:text="@string/save_message_button_label"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/delete_message_button"
        android:layout_width="@dimen/default_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/left_margin_small"
        android:layout_marginEnd="@dimen/right_margin_small"
        android:layout_marginBottom="128dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/delete_message_button_label"
        android:textColor="@android:color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>